assets/css/style.css
body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
}

header {
    text-align: center;
    background-color: aqua;
    border-bottom: solid 1px;
    border-top: solid 1px;
}

.button {
    display: flex;
    background-color: lightblue;
    border: none;
    color: rgb(0, 0, 0);
    padding: 6px 6px;
    margin: 10px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 30px;
    border-radius: 10px;
}

.button:hover {
    background-color: aqua;
}

/* Adds the scrolling feature for the character list */
div.scroll {
    background-color: lightblue;
    max-width: 100%;
    height: 600px;
    overflow-x: hidden;
    overflow-y: auto;
    text-align: center;
    padding: 20px;
    margin: 10px;
}

.main-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 16px;
}

.main-container section {
    width: 320px;
    max-width: calc(100% - 700px);
    width: 100%;
    background-color: azure;
    margin-bottom: 16px;
    border: solid 2px;
}

.main-container aside {
    width: 320px;
    max-width: 450px;
    background: grey;
    margin-bottom: 16px;
    border: solid 2px;
}

@media screen and (max-width: 800px) {
    .main-container {
        flex-direction: column;
        justify-content: center;
    }
}

